@@ -152,6 +152,8 @@ Version 1.13.0-dev:
      [modify_side] color= unless a new flag set is also provided.
    * Fix a bug where in movement records, "skip_sighted" was sometimes 
      spelled as "skip_sighed".
+   * Fix bug #22020: make base units with variations help entry clickable
+     from the 'Unit Description' menu entry or from side pane.
 
 Version 1.11.11:
  * Add-ons server:
